syntax = "proto2";

message ServiceErrorDescriptorMessage {
  required string type = 1;
  required string message = 2;
  optional string detail = 3;
}